--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Meu primeiro site publicado: página simples, rápida e acessível.">
-  <title>Meu Site Publicado</title>
+  <title>Meu Site Publicado - com uma mudança</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
