--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main id="conteudo">
     <section class="hero">
       <div class="container">
-        <h1 id="titulo">Olá, eu sou <span class="destaque">Seu Nome</span> 👋</h1>
+        <h1 id="titulo">Olá, eu sou o<span class="destaque">Kauã Ribeiro Neto</span> 👋</h1>
         <p class="lead">Este é o meu primeiro site publicado. Simples, leve e pronto para aparecer no mundo! 🚀</p>
         <div class="cta-group">
           <a class="btn btn-primary" href="#projetos">Ver projetos</a>
@@ -37,32 +37,33 @@
     <section id="sobre" class="bloco">
       <div class="container">
         <h2 id="sobre-titulo">Sobre mim</h2>
-        <p>Escreva aqui um parágrafo curto sobre quem você é, o que estuda ou no que trabalha. 
-        Diga também o que pretende publicar neste site (portfólio, anotações de aula, mini-blog etc.).</p>
+        <p>
+            Sou fascinado por tecnologia desde os meus 8 anos, quando comecei a jogar joguinho do Max Steel em um noteboo kde 2009,
+            no meu tempo livre gosto de jogar vôlei, jogar videogame com os amigos e programar pequenos projetos pessoais.
+        </p>
 
         <div class="cards">
           <article class="card">
             <h3 id="card1-titulo">O que sei fazer</h3>
             <ul>
-              <li>HTML semântico</li>
-              <li>CSS responsivo</li>
-              <li>Publicação em GitHub Pages/Netlify</li>
+              <li>Rest Api em Java ou TypeScript</li>
+              <li>Servidores de minecraft</li>
+              <li>Documentação de sistemas</li>
             </ul>
           </article>
           <article class="card">
             <h3 id="card2-titulo">O que estou aprendendo</h3>
             <ul>
-              <li>Acessibilidade na Web (a11y)</li>
-              <li>Boas práticas de SEO</li>
-              <li>Versionamento com Git</li>
+              <li>Typescript com express (Rest Api)</li>
+              <li>Github CI/CD</li>
             </ul>
           </article>
           <article class="card">
             <h3 id="card3-titulo">Minhas metas</h3>
             <ul>
-              <li>Lançar 1 projeto por mês</li>
-              <li>Melhorar meu Lighthouse em 10 pontos</li>
-              <li>Publicar um blog simples</li>
+              <li>Começar a trabalhar na área</li>
+              <li>Palestrar em um evento de tecnologia</li>
+              <li>Publicar um sistema</li>
             </ul>
           </article>
         </div>
@@ -72,23 +73,18 @@
     <section id="projetos" class="bloco">
       <div class="container">
         <h2 id="projetos-titulo">Projetos</h2>
-        <p class="muted">Troque os exemplos abaixo pelos seus.</p>
+        <p class="muted">Abaixo vou lsitar alguns projetos próprios.</p>
 
         <div class="grid">
           <article class="tile">
-            <h3>Landing simples</h3>
-            <p>Uma página de apresentação com chamada para ação.</p>
-            <a class="link" href="#">Abrir</a>
+            <h3>API de pagamentos</h3>
+            <p>Uma API simples de pagamento em TypeScript com express.</p>
+            <a class="link" href="https://github.com/ribeirobxz/shop-backend-ts">Abrir</a>
           </article>
           <article class="tile">
-            <h3>Portfólio</h3>
-            <p>Lista de trabalhos com imagens e links.</p>
-            <a class="link" href="#">Abrir</a>
-          </article>
-          <article class="tile">
-            <h3>Mini-blog</h3>
-            <p>Posts curtos escritos em HTML puro.</p>
-            <a class="link" href="#">Abrir</a>
+            <h3>Sistema de impressões (PI)</h3>
+            <p>Sistema de impressões usando c# para o Senac Sc</p>
+            <a class="link" href="https://github.com/ribeirobxz/Projeto-Integrador-Sistema-de-Impressoes">Abrir</a>
           </article>
         </div>
       </div>
